--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="media/pokeball.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <title>Pokédex</title>
 </head>
 <body>
-
+<main>
+    <div class="pokemon"></div>
+</main>
+<script src="script.js"></script>
 </body>
 </html>
