various tests on drag drop events

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
 <main>
-    <div class="pokemon"></div>
+    <div class="poke-stock"></div>
+
+    <div class="deck"></div>
 </main>
 <script src="script.js"></script>
 </body>
