usable 6cell deck

--- a/index.html
+++ b/index.html
@@ -11,10 +11,23 @@
 </head>
 <body>
 <main>
+    <div class="search">
+        <label for="search">Rechercher un Pokémon</label>
+        <input type="text" id="search">
+        <p class="amount"></p>
+    </div>
     <div class="poke-stock"></div>
 
-    <div class="deck"></div>
+    <div class="deck">
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+    </div>
 </main>
 <script src="script.js"></script>
+<script src="search.js"></script>
 </body>
 </html>
