adding color to pokemons

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="media/pokeball.png" type="image/x-icon">
+    <link href="https://fonts.cdnfonts.com/css/gill-sans" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Pokédex</title>
 </head>
 <body>
 <main>
     <div class="search">
-        <label for="search">Rechercher un Pokémon</label>
+        <label for="search">Search a Pokémon</label>
         <input type="text" id="search">
         <p class="amount"></p>
     </div>
