Deck Stockage and ID+

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     </div>
     <div class="poke-stock"></div>
 
+    <select name="" id="">
+        <option value="">Slot 1</option>
+        <option value="">Slot 1</option>
+        <option value="">Slot 1</option>
+        <option value="">Slot 1</option>
+        <option value="">Slot 1</option>
+        <option value="">Slot 1</option>
+    </select>
+
     <div class="deck">
         <div class="cell"></div>
         <div class="cell"></div>
@@ -29,6 +38,6 @@
     </div>
 </main>
 <script src="script.js"></script>
-<script src="search.js"></script>
+<script src="storage.js"></script>
 </body>
 </html>
