--- a/index.html
+++ b/index.html
@@ -12,29 +12,42 @@
 </head>
 <body>
 <main>
-    <div class="search">
-        <label for="search">Search a Pokémon</label>
-        <input type="text" id="search">
-        <p class="amount"></p>
-    </div>
-    <div class="poke-stock"></div>
-
-    <select name="" id="">
-        <option value="">Slot 1</option>
-        <option value="">Slot 1</option>
-        <option value="">Slot 1</option>
-        <option value="">Slot 1</option>
-        <option value="">Slot 1</option>
-        <option value="">Slot 1</option>
-    </select>
-
-    <div class="deck">
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+    <div class="column-container">
+        <div class="column">
+            <label for="slots">Select your team</label>
+            <select name="slot" id="slots">
+                <option value="">Slot 1</option>
+                <option value="">Slot 2</option>
+                <option value="">Slot 3</option>
+                <option value="">Slot 4</option>
+                <option value="">Slot 5</option>
+                <option value="">Slot 6</option>
+            </select>
+            <div class="hud">
+                <div></div>
+                <div class="deck">
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                </div>
+                <div class="trash">
+                    <img src="media/well.png" alt="pokétrash" draggable="false" id="trash">
+                </div>
+            </div>
+        </div>
+        <div class="column">
+            <div class="search">
+                <label for="search">Search a Pokémon</label>
+                <input type="text" id="search">
+                <p class="amount"></p>
+            </div>
+            <div class="poke-stock">
+                <!--Pokémons will be displayed here-->
+            </div>
+        </div>
     </div>
 </main>
 <script src="script.js"></script>
