--- a/index.html
+++ b/index.html
@@ -17,6 +17,46 @@
         <input type="text" id="search">
         <p class="amount"></p>
     </div>
+
+
+    <label for="pet-select">Choisissez un type de pokémon en particulier:</label>
+
+    <select name="type" id="type">
+        <option value="">All pokemons</option>
+        <option value="normal">normal</option>
+        <option value="water">water</option>
+        <option value="electric">electric</option>
+        <option value="grass">grass</option>
+        <option value="ice">ice</option>
+        <option value="fighting">fighting</option>
+        <option value="poison">poison</option>
+        <option value="ground">ground</option>
+        <option value="flying">flying</option>
+        <option value="psychic">psychic</option>
+        <option value="bug">bug</option>
+        <option value="rock">rock</option>
+        <option value="ghost">ghost</option>
+        <option value="dragon">dragon</option>
+        <option value="dark">dark</option>
+        <option value="steel">steel</option>
+        <option value="fairy">fairy</option>
+    </select>
+
+    <label for="pet-select">Choisissez une génération de pokémon en particulier:</label>
+
+    <select name="generation" id="generation">
+        <option value="">Toutes les générations</option>
+        <option value="generation-i">generation-i</option>
+        <option value="generation-ii">generation-ii</option>
+        <option value="generation-iii">generation-iii</option>
+        <option value="generation-iv">generation-iv</option>
+        <option value="generation-v">generation-v</option>
+        <option value="generation-vi">generation-vi</option>
+        <option value="generation-vii">generation-vii</option>
+        <option value="generation-viii">generation-viii</option>
+
+    </select>
+
     <div class="poke-stock"></div>
 
     <div class="deck">
