--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
                 <div class="deck"></div>
                 <div class="deck"></div>
                 <div class="deck"></div>
-                <div class="loading">
-                    <input type="text" placeholder="Save name..." id="save-text">
-                    <button id="save">Save Decks</button>
-                    <p class="message"></p>
+                <div class="save">
+                    <button id="save">Save Current Deck</button>
                 </div>
             </div>
         </div>
