--- a/index.html
+++ b/index.html
@@ -43,6 +43,21 @@
 </select>
 
 
+<label for="pet-select">Choisissez une génération de pokémon en particulier:</label>
+
+    <select name="generation" id="generation">
+        <option value="">Toutes les générations</option>
+        <option value="generation-i">generation-i</option>
+        <option value="generation-ii">generation-ii</option>
+        <option value="generation-iii">generation-iii</option>
+        <option value="generation-iv">generation-iv</option>
+        <option value="generation-v">generation-v</option>
+        <option value="generation-vi">generation-vi</option>
+        <option value="generation-vii">generation-vii</option>
+        <option value="generation-viii">generation-viii</option>
+
+    </select>
+
     <div class="poke-stock"></div>
 
     <div class="deck">
