--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         <input type="text" id="search">
         <p class="amount"></p>
     </div>
-    <div class="poke-stock"></div>
+    <div class="poke-stock">
+
+        
+    </div>
+
 
     <div class="deck">
         <div class="cell"></div>
