adding best feature of all time

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="hud">
                 <div class="trash">
                     <img src="media/well.png" alt="pokétrash" draggable="false" id="trash">
+                    <audio src="media/aaaAAAH.mp3" style="display: none" id="aaaAAAH"></audio>
                 </div>
                 <div class="deck"></div>
                 <div class="deck"></div>
