removing bench condition, optimizing refreshStat

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
     </div>
     <div class="column-container">
         <div class="column">
-            <button id="show">Afficher le benchmark</button>
-            <div class="benchmark" style="display: none">
+            <div class="benchmark">
                 <p class="teamTypes">Type(s) : <span class="container"></span></p>
                 <table class="stat">
                     <tr>
