trash empties all if double-click

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div class="trash">
             <img src="media/well.png" alt="pokétrash" draggable="false" id="trash">
             <audio src="media/aaaAAAH.mp3" style="display: none" id="aaaAAAH"></audio>
+            <audio src="media/vanish.mp3" style="display: none" id="vanish"></audio>
         </div>
         <div class="deck"></div>
         <div class="deck"></div>
