--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <div class="column-container">
         <div class="column">
             <div class="benchmark">
+                <h2>Score: <span id="score"></span></h2>
                 <p class="teamTypes">Type(s) : <span class="container"></span></p>
                 <table class="stat">
                     <tr>
