major performance on event improvement

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                     </div>
                 </div>
             </div>
+            <button id="saveCard">Save Card</button>
         </div>
         <div class="column">
             <div class="search">
@@ -124,9 +125,16 @@
             </div>
         </div>
     </div>
+
+    <div class="modal-save-background">
+        <div class="modal-save">
+
+        </div>
+    </div>
 </main>
 <script src="script.js"></script>
 <script src="storage.js"></script>
+<script src="http://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 <script src="benchmark.js"></script>
 </body>
 </html>
