--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 </main>
 <script src="script.js"></script>
 <script src="storage.js"></script>
-<script src="http://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 <script src="benchmark.js"></script>
 </body>
 </html>
