adding minified files (require NodeJS & uglifyJS)

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
         </div>
     </div>
 </main>
-<script src="script.js"></script>
-<script src="storage.js"></script>
+<script src="script.min.js"></script>
+<script src="storage.min.js"></script>
 <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-<script src="benchmark.js"></script>
+<script src="benchmark.min.js"></script>
 </body>
 </html>
